On image upload, it validates the file mime type. It is preventing file upload if there was a validation error (#48)

--- a/settings/image.ini
+++ b/settings/image.ini
@@ -394,3 +394,42 @@ MIMEList[]=image/gif
 Handler=ezexif
 MIMEList[]=image/jpeg
 MIMEList[]=image/tiff
+
+# Controls which image formats are allowed to get uploaded as a
+# content image. Full list of browser supported image mime types:
+# https://en.wikipedia.org/wiki/Comparison_of_web_browsers#Image_format_support
+[ValidUploadFormats]
+#jpeg
+MIMEList[]=image/jpeg
+
+#gif
+MIMEList[]=image/gif
+
+#Portable Network Graphics
+MIMEList[]=image/png
+
+#TIFF
+MIMEList[]=image/tiff
+MIMEList[]=image/tiff-fx
+
+#BMP file format
+MIMEList[]=image/bmp
+MIMEList[]=image/x-bmp
+
+# following MIME types are only supported by specific browsers
+
+#X BitMap
+#MIMEList[]=image/x‑xbitmap
+#MIMEList[]=image/x‑xbm
+
+#JPEG 2000
+#MIMEList[]=image/jp2
+#MIMEList[]=image/jpx
+#MIMEList[]=image/jpm
+
+#WebP
+#MIMEList[]=image/webp
+
+# JPEG XR
+#MIMEList[]=image/vnd.ms-photo
+#MIMEList[]=image/jxr
