EZP-27091: Added a "CollectSensitiveData" and "CollectSensitiveDataList" settings to mark data collections as a containing sensitive data

--- a/settings/collect.ini
+++ b/settings/collect.ini
@@ -53,6 +53,12 @@ CollectAnonymousData=enabled
 CollectAnonymousDataList[]
 CollectAnonymousDataList[poll]=enabled
 CollectAnonymousDataAttribute=collection_anonymous
+# Does collected data are sensitive ?
+CollectSensitiveData=true
+# Same as CollectSensitiveData bu is a list with of IC types and
+# their override settings, if specified it will override default setting
+CollectSensitiveDataList[]
+CollectSensitiveDataList[poll]=false
 # How information collection is handled in terms of user identification
 #
 # multiple  - each user can submit multiple data
