--- a/settings/collect.ini
+++ b/settings/collect.ini
@@ -53,9 +53,10 @@ CollectAnonymousData=enabled
 CollectAnonymousDataList[]
 CollectAnonymousDataList[poll]=enabled
 CollectAnonymousDataAttribute=collection_anonymous
-# Does collected data are sensitive ?
+# Are collected data sensitive? If true then user will be able to view collected
+# data only when previously submit a form
 CollectSensitiveData=true
-# Same as CollectSensitiveData bu is a list with of IC types and
+# Same as CollectSensitiveData but is a list with of IC types and
 # their override settings, if specified it will override default setting
 CollectSensitiveDataList[]
 CollectSensitiveDataList[poll]=false
