--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name":        "aplia/ezpublish-legacy",
+    "name":        "runelangseid/ezpublish-legacy",
     "description": "eZ Publish LegacyStack (4.x)",
     "homepage":    "http://aplia.no",
     "license":     "GPL-2.0",
