--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-curl": "Curl provides better support for interacting with other servers, like downloading packages over SSL",
         "ext-gd": "Unless you have ImageMagic installed GD is required for eZ Publish to be able to manipulate images",
         "ext-mysqli": "Mysqli is the default database handler used by eZ Publish",
+        "ext-openssl": "OpenSSL provides cryptographically secure random bytes, which is used in certain parts of the product to greatly improve security",
         "ext-pcntl": "If you plan to take advantage of eZ Publish Async publishing feature, then pcntl extension is required",
         "ezsystems/ezsi-ls": "ezsi would allow you to use Edge/Server Side Includes of blocks in templates",
         "ezsystems/ezscriptmonitor-ls": "ezscriptmonitor makes it possible to better deal with long running bulk operations within eZ Publish",
@@ -29,7 +30,7 @@
         "ext-simplexml": "*",
         "ezsystems/ezpublish-legacy-installer": "*",
         "ezsystems/ezautosave-ls": "~5.3",
-        "ezsystems/ezdemo-ls-extension": "~5.3",
+        "ezsystems/ezdemo-ls-extension": "~5.4",
         "ezsystems/ezflow-ls-extension": "~5.3",
         "ezsystems/ezgmaplocation-ls-extension": "~5.3",
         "ezsystems/ezie-ls": "~5.3",
@@ -61,5 +62,13 @@
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
         "zetacomponents/php-generator": "~1.1"
+    },
+    "conflict": {
+        "ezsystems/ezpublish-kernel": "<6.12 || >=2014.11 <2017.10"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2017.08.x-dev"
+        }
     }
 }
