--- a/settings/datetime.ini
+++ b/settings/datetime.ini
@@ -1,9 +1,9 @@
 #?ini charset="utf-8"?
 # eZ Publish configuration file for date and time handling.
 #
-# NOTE:  It is not recommended to edit this files directly, instead
+# NOTE:  It is not recommended to edit this file directly, instead
 #        a file in override should be created for setting the
-#        values that is required for your site. Either create
+#        values that are required for your site. Either create
 #        a file called settings/override/datetime.ini.append or
 #        settings/override/datetime.ini.append.php for more security
 #        in non-virtualhost modes (the .php file may already be present
