Re-add 'all' configuration
So thingin' breaks

--- a/settings/datetime.ini
+++ b/settings/datetime.ini
@@ -46,6 +46,7 @@
 
 [ClassSettings]
 Formats[]
+Formats[all]=%a, %A, %d, %D, %F, %g, %G, %h, %H, %i, %j, %l, %m, %M, %n, %O, %s, %T, %U, %w, %W, %Y, %y, %z, %Z, %r, %c
 
 Formats[short_date]=%j.%n.%Y
 Formats[long_date]=%j %F %Y
