Pure PHP script to run schema updates on the DB (#75)
* Pure PHP script to run schema updates on the DB

* Removing SQL command to set the storage engine. InnoDB is the default in mysql > 5.6. Adding stub class to support postgreSQL

* Fixing issue with schema version ID increase

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -556,7 +556,7 @@ UserGroupClassID=3
 UserClassGroupID=2
 # Which user is considered the creator
 UserCreatorID=14
-# Use either md5_password, md5_user, md5_site or plaintext
+# Use either md5_password, md5_user, md5_site, bcrypt, php_default or plaintext
 # md5_password generates password hash from password only.
 # md5_user generates password hash from user and password.
 # md5_site generates password hash from site, user and password
@@ -566,6 +566,8 @@ UserCreatorID=14
 # php_default uses whichever method PHP deems appropriate (currently bcrypt, as of PHP 5.5)
 # note: password hashes generated with md5_site will not work after
 #       changing the site name.
+# note: The DB schema changed to support bcrypt hashes, the password_hash DB field needs to be 255
+#       char long. See update/database/mysql|postgresql/lovestack/2.sql
 HashType=php_default
 # What SiteName should be used when hashing the user_password
 # with the 'md5_site' HashType
