--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name":        "ezsystems/ezpublish-legacy",
     "description": "eZ Publish LegacyStack (4.x)",
     "homepage":    "http://share.ez.no",
-    "license":     "GPL-2.0",
+    "license":     "GPL-2.0-only",
     "type":        "ezpublish-legacy",
     "suggest": {
         "php-64bit": "For support of more than 30 languages, a 64bit php installation on all involved prod/dev machines is required",
